# MountainHome

./: .cursorrules  .gitignore  HTTP_LIBRARY_RESEARCH.md  HTTP_PROXY_SETUP.md  KNOWN_ISSUES.md  README.md  TODO.md  UPGRADE_TO_LOVE2D_12.md  conf.lua  http_proxy.py  local_config.example.lua  main.lua  test_api_curl.bat  test_api_curl.sh
data/: maps.lua  trade_items.lua  trade_offers.lua
examples/artificial-agency/: README.md  pyproject.toml
examples/artificial-agency/src/artificial_agency/: _requests.py  _types.py  api_types.py  async_client.py  client.py  constants.py  errors.py
examples/artificial-agency/src/artificial_agency/generated_api_types/: component_config.py  error.py  function_description.py  introspection.py  messages.py  presentation_config.py  role_config.py  service_config.py  ui_config.py
examples/artificial-agency/src/examples/: client_example.py  sample_functions.py
examples/artificial-agency/tests/: test_async_client.py  test_client.py
lib/: HTTP_LIBRARY_OPTIONS.md  README_LIBRARIES.md  api_client.lua  cheat_system.lua  event_bus.lua  game_state.lua  hex_characters.lua  hex_map.lua  hex_tiles.lua  http_client.lua  http_proxy_client.lua  inventory.lua  item_placement.lua  kyle_character.lua  locations.lua  logger.lua  notification.lua  save_system.lua  screen_manager.lua  test_http_json.lua  test_https_available.lua  test_socket_https.lua  text_utils.lua  tile_growth.lua  ui_button.lua  weather.lua  weather_card.lua
screens/: achievements.lua  api_test.lua  cheats.lua  game.lua  intro.lua  load_game.lua  menu.lua  new_game_location.lua  (+3 more)
(+17 files in other folders)
