[project]
name = "artificial-agency"
version = "0.1.0"
description = "Python client for the Artificial.Agency API."
requires-python = "==3.11.*"
dependencies = ["httpx>=0.28.0", "pydantic"]

[dependency-groups]
dev = ["respx", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/artificial_agency"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
